--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <title>Benvenuto</title>
+        <title>Edoardo è gay</title>
     </head>
     <body>
-        <div align="center">Hello World!</div>
+        <div align="center">Edoardo è frocio . ittttt </div>
     </body>
 </html>
