--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/24.05.22 web.loader.js";
+      var loaderUrl = buildUrl + "/test2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/24.05.22 web.data",
-        frameworkUrl: buildUrl + "/24.05.22 web.framework.js",
-        codeUrl: buildUrl + "/24.05.22 web.wasm",
+        dataUrl: buildUrl + "/test2.data",
+        frameworkUrl: buildUrl + "/test2.framework.js",
+        codeUrl: buildUrl + "/test2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Nibbos production",
         productName: "Monkey Arena",
